--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,11 @@ header {
   color: white;
 }
 
+.search > input[type='text'] {
+  color: white;
+  font-family: inherit;
+}
+
 .search > svg {
   margin-left: 16px;
 }
@@ -54,24 +59,79 @@ header {
   justify-content: space-between;
 }
 
+.search-field.hide .filter{
+  border-radius: 4px;
+  box-shadow: 0 0 12px 0px rgba(22, 22, 24, 0.15);
+}
+
+.filter.flip > svg {
+  transform: rotate(180deg);
+}
+
 .filter {
   background-color: hsl(209, 23%, 22%);
   display: flex;
   width: 150px;
   justify-content: space-between;
   height: 50px;
-  border-radius: 4px;
+  border-radius: 4px 4px 0 0;
   color: white;
   align-items: center;
-  box-shadow: 0 0 12px 0px rgba(22, 22, 24, 0.15);
   padding: 0 16px;
+  cursor: pointer;
+  position: relative;
+  z-index: 1;
 }
+
+.filter-details {
+  position: absolute;
+  right: 60px;
+  top: 169px;
+  background-color: hsl(209, 23%, 22%);
+  box-shadow: 0 0 12px 0px rgba(22, 22, 24, 0.15);
+  display: flex;
+  flex-direction: column;
+  width: 182px;
+  border-radius: 0 0 4px 4px;
+}
+
+.search-field.hide .filter-details{
+  display: none;
+}
+
+.filter-details input {
+  height: 0;
+  width: 0;
+}
+
+.filter-details label:first-child {
+  color: white;
+  padding-top: 20px;
+}
+
+.filter-details label:last-child {
+  border-radius: 0 0 4px 4px;
+}
+
+.filter-details label {
+  color: white;
+  padding: 16px 20px;
+  font-size: 12px;
+  font-weight: 700;
+}
+
+.filter-details label:hover {
+  background-color: hsl(208, 20%, 33%);
+}
+
 
 .btn-filter {
   background-color: hsl(209, 23%, 22%);
   color: white;
   margin-right: 16px;
   border: 0;
+  font-weight: 600;
+  font-family: inherit;
 }
 
 .cards {
@@ -86,6 +146,11 @@ header {
   width: 300px;
   border-radius: 8px;
   box-shadow: 0 0 12px 0px rgba(22, 22, 24, 0.15);
+  cursor: pointer;
+}
+
+.card--country:hover {
+  transform: scale(1.05);
 }
 
 .card--country > img {
