--- a/src/App.css
+++ b/src/App.css
@@ -9,16 +9,17 @@ header {
   background-color: hsl(209, 23%, 22%);
   display: flex;
   justify-content: space-between;
-  color: white;
+  color: rgb(250, 248, 248);
   padding: 12px 60px;
   font-size: 12px;
 }
 
 .btn-mode {
   background: none;
-  color: white;
+  color: rgb(250, 248, 248);
   border: 0;
   font-family: inherit;
+  font-weight: 600;
 }
 
 .search {
@@ -27,7 +28,7 @@ header {
   width: 400px;
   height: 50px;
   border-radius: 4px;
-  color: white;
+  color: rgb(250, 248, 248);
   align-items: center;
   box-shadow: 0 0 12px 0px rgba(22, 22, 24, 0.15);
 }
@@ -41,11 +42,11 @@ header {
 }
 
 .search > input::placeholder {
-  color: white;
+  color: rgb(250, 248, 248);
 }
 
 .search > input[type='text'] {
-  color: white;
+  color: rgb(250, 248, 248);
   font-family: inherit;
 }
 
@@ -75,7 +76,7 @@ header {
   justify-content: space-between;
   height: 50px;
   border-radius: 4px 4px 0 0;
-  color: white;
+  color: rgb(250, 248, 248);
   align-items: center;
   padding: 0 16px;
   cursor: pointer;
@@ -105,7 +106,7 @@ header {
 }
 
 .filter-details label:first-child {
-  color: white;
+  color: rgb(250, 248, 248);
   padding-top: 20px;
 }
 
@@ -114,7 +115,7 @@ header {
 }
 
 .filter-details label {
-  color: white;
+  color: rgb(250, 248, 248);
   padding: 16px 20px;
   font-size: 12px;
   font-weight: 700;
@@ -127,7 +128,7 @@ header {
 
 .btn-filter {
   background-color: hsl(209, 23%, 22%);
-  color: white;
+  color: rgb(250, 248, 248);
   margin-right: 16px;
   border: 0;
   font-weight: 600;
@@ -173,7 +174,7 @@ header {
   font-size: 16px;
   font-weight: 800;
   margin: 0 0 12px 0;
-  color: white;
+  color: rgb(250, 248, 248);;
 }
 
 .card--text > p {
@@ -185,4 +186,68 @@ header {
 
 .bold {
   font-weight: 700;
+}
+
+.country--info > img {
+  width: 550px;
+  height: 400px;
+  object-fit: cover;
+  box-shadow: 0 0 50px 10px rgb(34 34 40);
+}
+
+.country--info {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 100px;
+  margin: 80px 120px 120px 120px;
+  color: rgb(250, 248, 248);
+}
+
+.country--column {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 36px;
+}
+
+.country--borders {
+  margin-top: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 8px;
+}
+
+.country--details h1 {
+  margin: 0 0 20px 0;
+}
+
+.country--borders p {
+  margin: 0;
+}
+
+.country--borders a {
+  text-decoration: none;
+  color: rgb(223, 223, 223);
+  background-color: hsl(209, 23%, 22%);
+  text-align: center;
+  padding: 6px 12px;
+  box-shadow: 0 0 25px 3px rgba(34 34 40 0.8);
+  border-radius: 4px;
+}
+
+.button--back {
+  text-decoration: none;
+  color: rgb(223, 223, 223);
+  background-color: hsl(209, 23%, 22%);
+  padding: 10px 24px;
+  box-shadow: 0 0 10px 5px rgba(27, 27, 36, 0.4);
+  border-radius: 4px;
+  width: 80px;
+  text-align: center;
+  margin: 80px 0 0 120px;
+}
+
+.button--back-text {
+  margin-left: 8px;
 }
