--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
 body {
   font-family: 'Nunito Sans', sans-serif;
   background-color: hsl(207, 26%, 17%);
+  transition: all ease 0.5s;
 }
 
 header {
@@ -12,6 +13,11 @@ header {
   color: rgb(250, 248, 248);
   padding: 12px 60px;
   font-size: 12px;
+}
+
+.header a {
+  text-decoration: none;
+  color: rgb(250, 248, 248);
 }
 
 .btn-mode {
@@ -67,6 +73,11 @@ header {
 
 .filter.flip > svg {
   transform: rotate(180deg);
+  transition: all ease 0.5s;
+}
+
+.filter > svg {
+  transition: all ease 0.5s;
 }
 
 .filter {
@@ -119,6 +130,7 @@ header {
   padding: 16px 20px;
   font-size: 12px;
   font-weight: 700;
+  transition: all ease 0.2s;
 }
 
 .filter-details label:hover {
@@ -190,7 +202,6 @@ header {
 
 .country--info > img {
   width: 550px;
-  height: 400px;
   object-fit: cover;
   box-shadow: 0 0 50px 10px rgb(34 34 40);
 }
@@ -200,7 +211,7 @@ header {
   justify-content: center;
   align-items: center;
   gap: 100px;
-  margin: 80px 120px 120px 120px;
+  margin: 50px 120px 120px 120px;
   color: rgb(250, 248, 248);
 }
 
@@ -210,12 +221,16 @@ header {
   gap: 36px;
 }
 
+.country--text {
+  color: rgb(221, 221, 221);
+}
+
 .country--borders {
   margin-top: 20px;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  gap: 8px;
+  gap: 12px;
 }
 
 .country--details h1 {
@@ -234,6 +249,11 @@ header {
   padding: 6px 12px;
   box-shadow: 0 0 25px 3px rgba(34 34 40 0.8);
   border-radius: 4px;
+  transition: all ease 0.2s;
+}
+
+.country--borders a:hover {
+  transform: scale(1.08);
 }
 
 .button--back {
@@ -241,11 +261,17 @@ header {
   color: rgb(223, 223, 223);
   background-color: hsl(209, 23%, 22%);
   padding: 10px 24px;
-  box-shadow: 0 0 10px 5px rgba(27, 27, 36, 0.4);
+  box-shadow: 0 0 8px 5px rgba(27, 27, 36, 0.2);
   border-radius: 4px;
   width: 80px;
   text-align: center;
-  margin: 80px 0 0 120px;
+  margin: 60px 0 0 120px;
+  cursor: pointer;
+  transition: ease all 0.2s;
+}
+
+.button--back:hover {
+  transform: scale(1.05);
 }
 
 .button--back-text {
