--- a/src/App.css
+++ b/src/App.css
@@ -293,7 +293,7 @@ header {
   justify-content: center;
   align-items: center;
   gap: 100px;
-  margin: 50px 120px 120px 120px;
+  margin: 50px 120px 0 120px;
 }
 .app.light .country--info {
   color: rgb(34, 34, 34);
@@ -389,7 +389,7 @@ header {
   }
   .country--info {
     gap: 50px;
-    margin: 40px 20px 20px 20px;
+    margin: 40px 20px 0 20px;
   }
   .button--back {
     margin: 60px 20px 0 20px;
@@ -412,7 +412,7 @@ header {
   }
   .country--info {
     gap: 36px;
-    margin: 40px 20px 20px 20px;
+    margin: 40px 20px 0 20px;
   }
   .button--back {
     margin: 60px 20px 0 20px;
@@ -447,7 +447,7 @@ header {
     flex-direction: column;
     align-items: center;
     gap: 36px;
-    margin: 30px 20px 40px 20px;
+    margin: 30px 20px 0 20px;
   }
   .country--details h1 {
     font-size: 22px;
